# libpetri

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
debug-ui/: index.html  package-lock.json  package.json  register-hooks.mjs  tsconfig.json  typedoc-resolve-hook.mjs  typedoc.json  vite.config.ts  vitest.config.ts
debug-ui/src/: main.ts  styles.css
debug-ui/src/dom/: bindings.ts  elements.ts  raf-loop.ts
debug-ui/src/net/: definition.ts  places.ts  shared-state.ts  types.ts
debug-ui/src/net/actions/: archive.ts  breakpoints.ts  connection.ts  diagram.ts  event-log.ts  filter-search.ts  inspectors.ts  modal.ts  playback.ts  session.ts
debug-ui/src/protocol/: commands.ts  index.ts  responses.ts
debug-ui/tests/: apply-event-to-state.test.ts  breakpoints.test.ts  checkpoints.test.ts  debug-net-integration.test.ts  playback-loop.test.ts  replay-subnet-verification.test.ts  search.test.ts  session-subnet-verification.test.ts  session.test.ts  setup.ts
docs/: 404.html  CNAME  index.html  paper-extended-tpn-hierarchical.mmd  paper-extended-tpn.mmd  paper-extended-tpn.pnml
examples/java-parser/: pom.xml
java/: build.gradle  pom.xml  settings.gradle
rust/: Cargo.toml
rust/benches/: Cargo.toml
rust/benches/benches/: executor.rs
rust/libpetri/: Cargo.toml  README.md  build.rs
rust/libpetri-core/: Cargo.toml
rust/libpetri-core/src/: action.rs  arc.rs  context.rs  input.rs  lib.rs  output.rs  petri_net.rs  place.rs  timing.rs  token.rs  transition.rs
rust/libpetri-debug/: Cargo.toml
rust/libpetri-debug/src/: debug_aware_event_store.rs  debug_command.rs  debug_event_store.rs  debug_protocol_handler.rs  debug_response.rs  debug_session_registry.rs  lib.rs  marking_cache.rs  net_event_converter.rs  place_analysis.rs  token_projector_registry.rs
rust/libpetri-debug/src/archive/: mod.rs  session_archive.rs  session_archive_reader.rs  session_archive_storage.rs  session_archive_writer.rs  session_metadata.rs
rust/libpetri-docgen/: Cargo.toml
rust/libpetri-docgen/src/: lib.rs
rust/libpetri-event/: Cargo.toml
rust/libpetri-event/src/: event_store.rs  lib.rs  net_event.rs  token_payload.rs
rust/libpetri-export/: Cargo.toml
rust/libpetri-export/src/: dot_exporter.rs  dot_renderer.rs  graph.rs  lib.rs  mapper.rs  styles.rs
rust/libpetri-runtime/: Cargo.toml  build.rs
rust/libpetri-runtime/src/: bitmap.rs  compiled_net.rs  environment.rs  executor.rs  executor_handle.rs  lib.rs  marking.rs  precompiled_executor.rs  precompiled_net.rs
rust/libpetri-verification/: Cargo.toml  build.rs
rust/libpetri-verification/src/: analyzer.rs  counterexample.rs  dbm.rs  environment.rs  incidence_matrix.rs  lib.rs  marking_state.rs  net_flattener.rs  p_invariant.rs  property.rs  result.rs  scc.rs  smt_encoder.rs  smt_verifier.rs  state_class.rs  state_class_graph.rs  structural_check.rs
rust/libpetri/examples/: basic.rs
rust/libpetri/src/: lib.rs
scripts/: build-debug-ui.sh  generate-debug-net-svg.ts  generate-doc-svgs.sh  generate-styles.sh  release-java.sh  release-rust.sh  release-typescript.sh  release.sh
spec/: 00-index.md  01-core-model.md  02-input-output-specs.md  03-timing.md  04-execution-model.md  05-concurrency.md  06-environment-places.md  07-verification.md  08-events-observability.md  09-export.md  10-performance.md  petri-net-styles.json
typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
typescript/scripts/: profile-executor.ts
typescript/src/: index.ts
typescript/src/core/: arc.ts  in.ts  index.ts  out.ts  petri-net.ts  place.ts  timing.ts  token-input.ts  token-output.ts  token.ts  transition-action.ts  transition-context.ts  transition.ts
typescript/src/debug/: debug-aware-event-store.ts  debug-command.ts  debug-event-store.ts  debug-protocol-handler.ts  debug-response.ts  debug-session-registry.ts  index.ts  marking-cache.ts  net-event-converter.ts  place-analysis.ts  session-completion-listener.ts
typescript/src/debug/archive/: file-session-archive-storage.ts  index.ts  (+6 more)
typescript/src/doclet/: diagram-renderer.ts  index.ts  net-resolver.ts  petri-net-plugin.ts  svg-renderer.ts
typescript/src/event/: event-store.ts  index.ts  net-event.ts
typescript/src/export/: dot-exporter.ts  dot-renderer.ts  graph.ts  index.ts  mermaid-exporter.ts  petri-net-mapper.ts  styles.ts
typescript/src/runtime/: bitmap-net-executor.ts  compiled-net.ts  executor-support.ts  index.ts  marking.ts  out-violation-error.ts  petri-net-executor.ts  precompiled-net-executor.ts  precompiled-net.ts
typescript/src/verification/: index.ts  marking-state.ts  smt-property.ts  smt-verification-result.ts  smt-verifier.ts
typescript/tests/benchmark/: benchmark-networks.ts  bitmap-net-executor.bench.ts  precompiled-net-executor.bench.ts
typescript/tests/core/: arc.test.ts  in.test.ts  out.test.ts  petri-net.test.ts  place.test.ts  timing.test.ts  token-input-output.test.ts  token.test.ts  transition-action.test.ts  transition-context.test.ts  transition.test.ts
typescript/tests/debug/: debug-aware-event-store.test.ts  debug-event-store.test.ts  debug-protocol-handler.test.ts  debug-session-registry.test.ts  file-session-archive-storage.test.ts  marking-cache.test.ts  net-event-converter.test.ts  session-archive-v2.test.ts  session-archive-v3.test.ts  session-archive-writer-consistency.test.ts  session-archive.test.ts
typescript/tests/event/: event-store.test.ts
typescript/tests/export/: dot-exporter.test.ts  dot-renderer.test.ts  mermaid-exporter.test.ts  petri-net-mapper.test.ts
typescript/tests/runtime/: bitmap-net-executor.test.ts  compiled-net.test.ts  executor-support.test.ts  marking.test.ts  precompiled-net-executor.test.ts
typescript/tests/verification/: incidence-matrix.test.ts  marking-state.test.ts  net-flattener.test.ts  p-invariant-computer.test.ts  smt-property.test.ts  smt-verification-result.test.ts  smt-verifier.test.ts  structural-check.test.ts
(+218 files in other folders)
