[workspace]
resolver = "2"
members = [
    "libpetri-core",
    "libpetri-event",
    "libpetri-runtime",
    "libpetri-export",
    "libpetri-verification",
    "libpetri",
    "benches",
]

[workspace.package]
version = "1.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/libpetri/libpetri"

[workspace.dependencies]
libpetri-core = { path = "libpetri-core" }
libpetri-event = { path = "libpetri-event" }
libpetri-runtime = { path = "libpetri-runtime" }
libpetri-export = { path = "libpetri-export" }
libpetri-verification = { path = "libpetri-verification" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }
