[package]
name = "libpetri-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types for libpetri Coloured Time Petri Net engine"

[dependencies]
libpetri-event = { workspace = true }
