[package]
name = "libpetri-debug"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Debug protocol for libpetri Coloured Time Petri Net engine"

[dependencies]
libpetri-core = { workspace = true }
libpetri-event = { workspace = true }
libpetri-export = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
flate2 = { version = "1", optional = true }

[features]
default = []
archive = ["dep:flate2"]
