[package]
name = "libpetri-docgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Build-script helper for generating Petri net SVG diagrams in rustdoc"

[dependencies]
libpetri-core = { workspace = true }
libpetri-export = { workspace = true }
