[package]
name = "libpetri-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bitmap executor runtime for libpetri Coloured Time Petri Net engine"

[dependencies]
libpetri-core = { workspace = true }
libpetri-event = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
tokio = ["dep:tokio"]
