[package]
name = "libpetri-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bitmap executor runtime for libpetri Coloured Time Petri Net engine"

[dependencies]
libpetri-core = { workspace = true }
libpetri-event = { workspace = true }
tokio = { workspace = true, optional = true }

[build-dependencies]
libpetri-docgen = { workspace = true }

[features]
default = []
tokio = ["dep:tokio"]
