[package]
name = "libpetri-verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Formal verification for libpetri Coloured Time Petri Net engine"

[dependencies]
libpetri-core = { workspace = true }

[features]
default = []
z3 = []
