[package]
name = "libpetri-verification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Formal verification for libpetri Coloured Time Petri Net engine"

[dependencies]
libpetri-core = { workspace = true }

[build-dependencies]
libpetri-docgen = { workspace = true }

[features]
default = []
z3 = []
