[package]
name = "libpetri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Coloured Time Petri Net engine with formal verification"

[dependencies]
libpetri-core = { workspace = true }
libpetri-event = { workspace = true }
libpetri-runtime = { workspace = true }
libpetri-export = { workspace = true }
libpetri-verification = { workspace = true }
libpetri-debug = { workspace = true, optional = true }

[build-dependencies]
libpetri-docgen = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
tokio = ["libpetri-runtime/tokio"]
z3 = ["libpetri-verification/z3"]
debug = ["dep:libpetri-debug"]

[[example]]
name = "basic"
required-features = ["tokio"]
